--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="9"
         android:targetSdkVersion="14" />
 
+    /** <application
+        android:allowBackup ="true"
+        android:icon="@drawble/ic_launcher" */
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
